--- a/ghcjs-servant-client.cabal
+++ b/ghcjs-servant-client.cabal
@@ -1,5 +1,5 @@
 name:                ghcjs-servant-client
-version:             0.4.2
+version:             0.4.2-elevence
 synopsis: automatical derivation of querying functions for servant webservices
 description:
   This library lets you derive automatically Haskell functions that
@@ -44,11 +44,11 @@ library
     , text
     , transformers
     , ghcjs-base
-    , ghcjs-prim          
+    , ghcjs-prim
     , split
     , case-insensitive
     , primitive
-              
+
   hs-source-dirs: src
   default-language: Haskell2010
   ghc-options: -Wall
